Remove the alert test message and fix the save column error on shared column (Moonshine-IDE/Moonshine-IDE#1216)

--- a/src/view/DominoViewShareColumnEditor.mxml
+++ b/src/view/DominoViewShareColumnEditor.mxml
@@ -376,7 +376,7 @@
 			hasChanged=false;
 			var xmlStr:String="<?xml version=\"1.0\" encoding=\"utf-8\"?>"+"\r\n";
 			var xmlView:XML=getSavedXMLFromMemoryObject();
-			var colXML:XML=xmlView.column;
+			var colXML:XML=xmlView.column[0];
 			xmlStr=xmlStr+xmlView.toXMLString();
 			
 			_fileStreamMoonshine.open(_fileMoonshine, FileMode.WRITE);
