--- a/src/view/DominoViewMockVisualEditor.mxml
+++ b/src/view/DominoViewMockVisualEditor.mxml
@@ -645,14 +645,15 @@
 	private function removeColumn(event:Event):void 
 	{
 		
-		if(selectedColumnObject!=null){
+		
 			var pt:Point = new Point(stage.mouseX, stage.mouseY);
             pt = dgColumns.columnHeaderGroup.globalToLocal(pt);
             var index:int = dgColumns.columnHeaderGroup.getHeaderIndexAt(pt.x, pt.y);
             
 		
 			//var selectindex:int=columnObjectList.getItemIndex(selectedColumnObject);
-			if(index!=-1){
+			//Alert.show("index:"+index+"--"+dgColumns.columns.length+"--"+columnObjectList.length);
+			if(index!=-1 && index <=  columnObjectList.length-1){
 				var column:GridColumn = dgColumns.columns.getItemAt(index) as GridColumn; 
 				
 				var dataGrid:DataGrid = (column && column.grid) ? column.grid.dataGrid : null;
@@ -681,7 +682,7 @@
 				columnAccordion.visible =columnAccordion.includeInLayout = false;
 				sharedColumnLabel.visible =sharedColumnLabel.includeInLayout = false;
 			}
-		}
+		
 	}
 
 
