Fix the default value for xml encode (Moonshine-IDE/Moonshine-IDE#1221)

--- a/src/view/VisualEditor.mxml
+++ b/src/view/VisualEditor.mxml
@@ -86,7 +86,7 @@
 				<s:ArrayList>
 					<fx:Object icon="@Embed('/assets/list.png')" label="" toolTip="Properties"/>
 					<fx:Object icon="@Embed('/assets/organize.png')" label="" toolTip="Organize"/>
-					<fx:Object icon="@Embed('/assets/cog-solid.png')" label="" toolTip="Actions"/>
+					<!-- <fx:Object icon="@Embed('/assets/cog-solid.png')" label="" toolTip="Actions"/> -->
 					
 				</s:ArrayList>
 			</s:ButtonBar>
