--- a/src/view/forms/DropdownListForm.mxml
+++ b/src/view/forms/DropdownListForm.mxml
@@ -57,6 +57,8 @@
         import spark.events.IndexChangeEvent;
         import utils.GenericUtils;
         import mx.collections.ArrayCollection;
+
+        import mx.controls.Alert;
  
 
         [Bindable]
@@ -141,7 +143,6 @@
             {
                 ddlSelection.labelField = _labelField;
             }
-
             ddlSelection.callLater(selectCurrentItem);
 
             updateBinding();
@@ -156,6 +157,7 @@
                 for (var i:int = 0; i < dpCount; i++)
                 {
                     var item:Object = ddlSelection.dataProvider.getItemAt(i);
+                    
                     if(_valueField&&item[_valueField].toString() == selectedItem[_textProperty].toString()){
                         ddlSelection.selectedItem = item;
                         
